--- a/src/sass/blocks/_about.sass
+++ b/src/sass/blocks/_about.sass
@@ -1,9 +1,5 @@
 .about
-    padding: 120px 0
-    &__divider
-        width: 60px
-        height: 3px
-        background-color: $main-color
+    padding: 120px 0 60px 0
     &__suptitle
         position: relative
         padding-left: 10px
@@ -46,13 +42,12 @@
         &-item:nth-child(3)
             grid-column: 2/4
             max-width: 570px
-            margin-top: 24px
         &-item:nth-child(4)
             max-width: 260px
-            margin-top: 40px
+            margin-top: 20px
         &-item:nth-child(5)
             max-width: 260px
-            margin-top: 40px
+            margin-top: 20px
         &-item:nth-child(6)
             max-width: 260px
             margin-top: 20px
