--- a/src/sass/blocks/_title.sass
+++ b/src/sass/blocks/_title.sass
@@ -5,6 +5,7 @@
     &_fz14
         font-size: 14px
         line-height: 21px
+        margin-bottom: 0
     &_fz16
         font-size: 16px
         line-height: 24px
