--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -15,6 +15,19 @@
             &-item
                 &:nth-child(1)
                     margin-right: 30px
+    .resume
+        &__wrapper
+            column-gap: 40px
+    .skills
+        &-grid
+            &__wrapper
+                grid-template-columns: repeat(4, 1fr)
+            &__item
+                padding: 20px
+        &-sliders
+            grid-template-columns: repeat(3, 1fr)
+            &__outline
+                width: 100%
 
 @media ( max-width: 992px )
     .container
@@ -56,6 +69,20 @@
                 width: 100%
                 height: 100%
                 object-fit: cover
+    .resume
+        &__wrapper
+            padding: 30px 15px 0 15px
+            grid-template-columns: repeat(2, 1fr)
+    .skills
+        &-grid
+            &__wrapper
+                grid-template-columns: repeat(3, 1fr)
+                grid-template-rows: repeat(3, 1fr)
+        &-sliders
+            gap: 25px 30px
+            padding: 0
+            &__title
+                font-size: 13px
 
 @media ( max-width: 768px )
     .container
@@ -83,6 +110,32 @@
         &__descr
             &::before
                 left: -60px
+    .resume
+        padding: 30px 0
+        &__item
+            &::before
+                width: 25px
+            &-icon
+                left: 25px
+            &-head
+                padding: 35px 0 0 75px
+    .skills
+        padding: 30px 0
+        &__subtitle
+            font-size: 30px
+        &-grid
+            &__wrapper
+                padding: 20px
+                grid-template-columns: repeat(2, 1fr)
+                grid-template-rows: repeat(4, 1fr)
+                column-gap: 30px
+            &__item
+                text-align: center
+                img
+                    margin: 0 auto
+        &-sliders
+            padding: 30px
+            grid-template-columns: repeat(2, 1fr)
 
 @media ( max-width: 576px )
     .container
@@ -106,6 +159,7 @@
         &__title
             width: 285px
     .about
+        padding-bottom: 20px
         h2
             font-size: 24px
         &__text
@@ -115,6 +169,43 @@
         &__descr
             &::before
                 left: -67px
+    .resume
+        padding: 20px 0
+        .divider
+            margin-top: 12px
+        &__subtitle
+            font-size: 24px
+            line-height: 35px
+        &__wrapper
+            padding: 20px 5px 0px 5px
+            grid-template-columns: repeat(1, 1fr)
+            row-gap: 40px
+        &__item
+            &-body
+                margin-top: 22px
+    .skills
+        padding: 20px 0
+        .divider
+            margin-top: 12px
+        &__subtitle
+            font-size: 24px
+            line-height: 34px
+        &-grid
+            &__wrapper
+                grid-template-columns: repeat(1,1fr)
+                grid-template-rows: repeat(7, 1fr)
+            &__item
+                text-align: left
+                padding: 25px 30px
+                img
+                    margin: 0
+        &-sliders
+            grid-template-columns: repeat(1, 1fr)
+            gap: 40px 0
+            padding: 40px 0 0 0
+            &__outline
+                margin-top: 21px
+
 
 
     
