--- a/src/sass/blocks/_media.sass
+++ b/src/sass/blocks/_media.sass
@@ -28,6 +28,26 @@
             grid-template-columns: repeat(3, 1fr)
             &__outline
                 width: 100%
+    .portfolio
+        &__wrapper
+            grid-template-columns: repeat(auto-fit, 280px)
+            grid-auto-rows: 280px
+            justify-content: space-around
+            row-gap: 35px
+            .horizontal, .vertical
+                grid-row: unset
+                grid-column: unset
+    .contacts
+        &__wrapper
+            grid-template-columns: 300px 500px
+            justify-content: space-around
+        &__photo
+            img
+                width: 100%
+                height: 100%
+                object-fit: cover
+        &__form
+            grid-template-columns: repeat(2, 240px)
 
 @media ( max-width: 992px )
     .container
@@ -83,6 +103,32 @@
             padding: 0
             &__title
                 font-size: 13px
+    .portfolio
+        padding: 20px 0
+    .price
+        padding: 20px 0
+        &-grid
+            padding-top: 30px
+            grid-template-columns: repeat(auto-fit, 330px)
+            grid-template-rows: repeat(auto-fit,60px)
+            row-gap: 20px
+    .contacts
+        &__form
+            grid-template: 45px 45px 190px / repeat(2, 200px)
+        &__title
+            font-size: 30px
+        &__wrapper
+            grid-template-columns: 250px 420px
+            padding: 0
+        &__name
+            grid-column: 1/3
+        &__email
+            grid-column: 1/3
+        &__btn
+            width: 200px
+            font-size: 13px
+
+
 
 @media ( max-width: 768px )
     .container
@@ -134,8 +180,23 @@
                 img
                     margin: 0 auto
         &-sliders
-            padding: 30px
+            padding: 40px
             grid-template-columns: repeat(2, 1fr)
+    .contacts
+        text-align: center
+        padding: 20px 0
+        &__photo
+            display: none
+        &__wrapper
+            display: block
+        &__suptitle
+            &::before
+                left: 43%
+        .divider
+            margin: 4px auto 0 auto
+        &__form
+            padding: 0 60px
+
 
 @media ( max-width: 576px )
     .container
@@ -205,6 +266,35 @@
             padding: 40px 0 0 0
             &__outline
                 margin-top: 21px
+    .portfolio
+        padding: 20px
+    .price
+        &-grid
+            grid-template-columns: repeat(auto-fit, 300px)
+            &__bold
+                font-size: 13px
+    .contacts
+        &__title
+            font-size: 24px
+        text-align: left
+        &__suptitle
+            &::before
+                left: -7px
+        .divider
+            margin: 0
+        &__form
+            padding: 0
+            grid-template: 45px 45px 143px/repeat(2,150px)
+        &__triggers
+            display: flex
+            flex-direction: column-reverse
+            align-items: center
+        &__policy
+            width: 180px
+        &__btn
+            margin-top: 20px
+            width: 219px
+            font-size: 14px
 
 
 
