--- a/src/sass/blocks/_price.sass
+++ b/src/sass/blocks/_price.sass
@@ -6,7 +6,7 @@
         display: grid
         padding-top: 60px
         grid-template: repeat(3, 44px) / repeat(2, 366px)
-        justify-content: space-between
+        justify-content: space-evenly
         gap: 15px 0
         &__item
             padding-left: 26px
